--- a/src/components/SubNavBar.css
+++ b/src/components/SubNavBar.css
@@ -19,7 +19,10 @@
     /* Formatting */
     color: white;
     text-align: center;
+
+    box-sizing: border-box;
     padding: 5px 30px;
+    
     text-decoration: none;
     font-size: 1em;
 }
